Try out smoother animation and possible overflow fix

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* { 
+* {
   margin: 0;
 }
 
@@ -27,8 +27,9 @@ input {
 }
 
 label {
+  position: relative;
   display: flex;
-  flex-grow: 1;
+  flex: 1 0 auto;
   align-items: center;
   justify-content: center;
   cursor: pointer;
@@ -57,13 +58,14 @@ input ~ div {
   width: 100%;
   height: 100%;
   line-height: 100vh;
-  font-size: 50vh;
+  font-size: 50vw;
 }
 
 input:checked ~ div {
   display: block;
   animation-name: blackOutAndIn;
-  animation-duration: 3s;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
 }
 
 input:checked + label {
